expand nodes 디테일 나오게 수정